--- a/waybar/style.css
+++ b/waybar/style.css
@@ -10,7 +10,7 @@
 window#waybar {
   background: transparent;
 }
-#custom-arch,#workspaces,#window,#clock,#cpu,#memory,#temperature,#network,#custom-pacman,#custom-weather{
+#custom-arch,#workspaces,#window,#clock,#backlight,#pulseaudio,#battery,#cpu,#memory,#temperature,#network,#custom-pacman,#custom-weather{
   border-radius: 10px;
   background-color: #11111b;
   margin-top: 15px;
@@ -40,6 +40,18 @@ window#waybar {
 #cpu{
   background-color: #FF9A8B;
   background-image: linear-gradient(90deg, #FF9A8B 0%, #FF6A88 55%, #FF99AC 100%);
+}
+#battery{
+  background-color:#81FBB8;
+  background-image: linear-gradient( 135deg, #81FBB8 10%, #28C76F 100%);
+}
+#backlight{
+  background-color: #52ACFF;
+  background-image: linear-gradient(180deg, #52ACFF 25%, #FFE32C 100%);
+}
+#pulseaudio{
+  background-color: #F4D03F;
+  background-image: linear-gradient(132deg, #F4D03F 0%, #16A085 100%);
 }
 #memory{
   background-color: #74EBD5;
