--- a/waybar/style.css
+++ b/waybar/style.css
@@ -5,70 +5,32 @@
   font-feature-settings: '"zero", "ss01", "ss02", "ss03", "ss04", "ss05", "cv31"';
   font-weight:bold;
   min-height: 15px;
-  color: #cdd6f4;
+  /** 濃いめのグレー */
+  color: #D3C6AA;
 }
 window#waybar {
-  background: transparent;
+  /* #3C4841を透過させる */
+  background: rgba(60, 72, 65, 0.5);
+  border-radius: 10px;
 }
 #custom-arch,#workspaces,#window,#clock,#backlight,#pulseaudio,#battery,#cpu,#memory,#temperature,#network,#custom-pacman,#custom-weather{
   border-radius: 10px;
-  background-color: #11111b;
-  margin-top: 15px;
+  background-color: #3C4841;
   padding-left: 15px;
   padding-right: 15px;
-  margin-right: 15px;
+  margin: 5px 8px;
 }
 #custom-arch {
-  background-image: linear-gradient( 109.6deg,  rgba(25,170,209,1) 11.3%, rgba(21,65,249,1) 69.9% );
+  background:#A7C080;
   margin-left:15px;
 }
 #workspaces{
   background: transparent;
 }
 #workspaces button {
-  background:linear-gradient(135deg, #5b247a 0%,#1bcedf 100%);
+  background-color: #3C4841;
   margin:0 3px;
 }
 #workspaces button.focused{
-  background-color: #acabb0;
-  background-image: linear-gradient(315deg, #acabb0 0%, #e01c34 74%);
-}
-
-#window{
-  background:linear-gradient(135deg, #184e68 0%,#57ca85 100%);
-}
-#cpu{
-  background-color: #FF9A8B;
-  background-image: linear-gradient(90deg, #FF9A8B 0%, #FF6A88 55%, #FF99AC 100%);
-}
-#battery{
-  background-color:#81FBB8;
-  background-image: linear-gradient( 135deg, #81FBB8 10%, #28C76F 100%);
-}
-#backlight{
-  background-color: #52ACFF;
-  background-image: linear-gradient(180deg, #52ACFF 25%, #FFE32C 100%);
-}
-#pulseaudio{
-  background-color: #F4D03F;
-  background-image: linear-gradient(132deg, #F4D03F 0%, #16A085 100%);
-}
-#memory{
-  background-color: #74EBD5;
-  background-image: linear-gradient(90deg, #74EBD5 0%, #9FACE6 100%);
-}
-#network{
-  background-color: #FAD961;
-  background-image: linear-gradient(90deg, #FAD961 0%, #F76B1C 100%);
-}
-#clock{
-  background-color: #FF3CAC;
-  background-image: linear-gradient(225deg, #FF3CAC 0%, #784BA0 50%, #2B86C5 100%);
-}
-#custom-pacman{
-  background-color: #7f5a83;
-  background-image: linear-gradient(315deg, #7f5a83 0%, #0d324d 74%);
-}
-#custom-weather{
-  background: linear-gradient(220.55deg, #A531DC 0%, #4300B1 100%);
+  background-color: #83C092;
 }
