--- a/waybar/style.css
+++ b/waybar/style.css
@@ -1,36 +1,49 @@
 * {
   border: none;
-  font-family: 'PlemolJP35 Console NF', 'Symbols Nerd Font Mono';
+  font-family: "PlemolJP35 Console NF", "Symbols Nerd Font Mono";
   font-size: 16px;
   font-feature-settings: '"zero", "ss01", "ss02", "ss03", "ss04", "ss05", "cv31"';
-  font-weight:bold;
+  font-weight: bold;
   min-height: 15px;
   /** 濃いめのグレー */
-  color: #D3C6AA;
+  color: #d3c6aa;
 }
 window#waybar {
   /* #3C4841を透過させる */
   background: rgba(60, 72, 65, 0.5);
   border-radius: 10px;
 }
-#custom-arch,#workspaces,#window,#clock,#backlight,#pulseaudio,#battery,#cpu,#memory,#temperature,#network,#custom-pacman,#custom-weather{
+#custom-Waybar-Clockify,
+#custom-arch,
+#workspaces,
+#window,
+#clock,
+#backlight,
+#pulseaudio,
+#battery,
+#cpu,
+#memory,
+#temperature,
+#network,
+#custom-pacman,
+#custom-weather {
   border-radius: 10px;
-  background-color: #3C4841;
+  background-color: #3c4841;
   padding-left: 15px;
   padding-right: 15px;
   margin: 5px 8px;
 }
 #custom-arch {
-  background:#A7C080;
-  margin-left:15px;
+  background: #a7c080;
+  margin-left: 15px;
 }
-#workspaces{
+#workspaces {
   background: transparent;
 }
 #workspaces button {
-  background-color: #3C4841;
-  margin:0 3px;
+  background-color: #3c4841;
+  margin: 0 3px;
 }
-#workspaces button.focused{
-  background-color: #83C092;
+#workspaces button.focused {
+  background-color: #83c092;
 }
